fix layout bug

--- a/app/app.scss
+++ b/app/app.scss
@@ -8,9 +8,12 @@ body, ul, li {
   padding: 0;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
   font: 62.5% san-serif;
-  overflow-x: hidden;
 }
 
 li {
